# CVKawa

./: .gitignore  Build.sh  LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.ts
JsonToPdf/: Build.sh  DevBuild.sh  README.md  go.mod  go.sum
JsonToPdf/JTPAction/: PdfGen.go  action.go  tools.go
JsonToPdf/assets/: cv_data.json
JsonToPdf/cmd/: main.go
JsonToPdf/cmd/commands/: commands.go
JsonToPdf/common/: common.go  schema.go
JsonToPdf/language/: lang.go  lang.toml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  sqlite3.lib  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/cv_kawa_database/: database.rs  mod.rs
src-tauri/src/cv_kawa_main/: main.rs  mod.rs  output.rs  schema.rs
src-tauri/src/cv_kawa_system/: mod.rs  system.rs
src/api/: SystemApi.ts
src/assets/: base.css
src/common/: cvSchemas.ts  i18nSchema.ts  publicSchemas.ts  staticData.ts
src/components/: BlockContainer.vue  CVCardList.vue  LogoView.vue
src/components/CVBaseInfo/: CVBaseInfo.vue
src/components/CVEduInfo/: CVEduInfo.vue
src/components/CVKawaEdit/: BaseInfoEdit.vue  EduInfoEdit.vue  ResumeEdit.vue  SkillsEdit.vue
src/components/CVResume/: CVResume.vue
src/components/CVSkills/: CVSkills.vue
src/components/DocLayout/: LayoutOptions.ts
src/i18n/: en-US.ts  ja-JP.ts  zh-CN.ts
src/pages/: CVKawaEdit.vue  CVListView.vue  CVPrintPreview.vue  LayoutView.vue  WelcomeView.vue
src/plugins/: i18n.ts  naive.ts  router.ts  store.ts
src/routes/: guard.ts  routes.ts
src/stores/: appStore.ts  cvStore.ts
src/tools/: main.ts
(+4 files in other folders)
