[package]
name = "cv-kawa"
version = "0.0.2"
description = "A Tauri App"
authors = ["StartXG"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater", "macos-private-api", "api-all", "process-command-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.31.0"
uuid = { version = "1.8.0", features = ["v4"] }
time = "0.3.36"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
